--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+   
+    <link rel="stylesheet" href="/assets/font-awesome.css">
    <link rel="stylesheet" type = "text/css" href="/assets/main.css">
     <title>jon reinhold</title>
   </head>
