--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
     <link rel="stylesheet" href="/assets/font-awesome.css">
    <link rel="stylesheet" type = "text/css" href="/assets/main.css">
-    <title>jon reinhold</title>
+    <title>Jon Reinhold | :)</title>
   </head>
   
   <body>
