--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="/src/test.js"></script>
     
-    <script>console.log("testing js..");</script>
+    <script>console.log("js is not disabled");</script>
   </body>
   
 </html>
